scroll lock off

--- a/src/main/frontend/src/assets/css/Main.scss
+++ b/src/main/frontend/src/assets/css/Main.scss
@@ -5,7 +5,7 @@ body {
     font-family: 'Spoqa Han Sans Neo', 'sans-serif';
     font-optical-sizing: auto;
     font-style: normal;
-    overflow: hidden; // 전체 페이지에서 스크롤을 막음
+    // overflow: hidden; // 전체 페이지에서 스크롤을 막음
 }
 
 .container {
