--- a/src/main/frontend/src/assets/css/EntryList.scss
+++ b/src/main/frontend/src/assets/css/EntryList.scss
@@ -30,10 +30,8 @@
     text-align: left;
 }
 
-/* 새로 추가할 CSS 스타일 */
-.entry-createDate {
-    font-size: 0.8em; /* 기본 폰트 크기의 80%로 설정 */
-    color: #999; /* 색상 설정 (선택 사항) */
+.createDate {
+    font-size: 0.6em;
+    color: #999;
     margin-bottom: 10px;
-    text-align: center; /* 날짜를 가운데 정렬 (선택 사항) */
 }
