--- a/src/main/frontend/src/assets/css/Character.scss
+++ b/src/main/frontend/src/assets/css/Character.scss
@@ -1,19 +1,13 @@
-/* Character.scss */
 .character-area {
   position: relative;
-  width: 500px; /* 캐릭터 영역의 너비 */
-  height: 300px; /* 캐릭터 영역의 높이 */
-  border: 2px solid black;
-  overflow: hidden; /* 캐릭터가 영역을 넘어가지 않도록 */
+  width: 100%;
+  height: 100%; // 전체 화면을 사용하도록 조정할 수 있음
+  background-color: #eee; // 배경색 설정 (디버깅 용도로 추가)
 }
 
 .character {
   position: absolute;
   width: 50px;
   height: 50px;
-  background-color: red;
-}
-
-.controls {
-  margin-top: 10px;
+  background-color: red; // 캐릭터의 색상
 }
