--- a/src/main/frontend/src/assets/css/Character.scss
+++ b/src/main/frontend/src/assets/css/Character.scss
@@ -1,8 +1,8 @@
 .character-area {
   position: relative;
-  width: 100%;
-  height: 100%; // 전체 화면을 사용하도록 조정할 수 있음
-  background-color: #eee; // 배경색 설정 (디버깅 용도로 추가)
+  width: 100vw; // 화면 전체 너비
+  height: 100vh; // 화면 전체 높이
+  background-color: #eee; // 배경색 (디버깅 용도)
 }
 
 .character {
