--- a/src/main/frontend/src/assets/css/Character.scss
+++ b/src/main/frontend/src/assets/css/Character.scss
@@ -1,3 +1,4 @@
+/* assets/css/Character.scss */
 .character-area {
   position: relative;
   flex: 1; /* flex-grow 설정으로 나머지 공간을 채우기 위해 */
@@ -10,13 +11,4 @@
   width: 50px;
   height: 50px;
   background-color: red; /* 캐릭터의 색상 */
-}
-
-.character-message {
-  position: absolute;
-  background-color: #fff;
-  border: 1px solid #ccc;
-  padding: 5px;
-  border-radius: 5px;
-  white-space: nowrap;
 }
