--- a/src/main/frontend/src/assets/css/Character.scss
+++ b/src/main/frontend/src/assets/css/Character.scss
@@ -1,14 +1,15 @@
-/* assets/css/Character.scss */
+// assets/css/Character.scss
+
 .character-area {
   position: relative;
-  flex: 1; /* flex-grow 설정으로 나머지 공간을 채우기 위해 */
-  background-color: #eee; /* 배경색 (디버깅 용도) */
-  overflow: hidden; /* 캐릭터가 부모 영역을 넘지 않도록 설정 */
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
 
 .character {
   position: absolute;
   width: 50px;
   height: 50px;
-  background-color: red; /* 캐릭터의 색상 */
+  background-color: lightgray;
 }
