--- a/src/main/frontend/src/assets/css/Character.scss
+++ b/src/main/frontend/src/assets/css/Character.scss
@@ -1,15 +1,12 @@
-// assets/css/Character.scss
-
-.character-area {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-}
-
+/* components/game/Character.scss */
 .character {
   position: absolute;
   width: 50px;
   height: 50px;
-  background-color: lightgray;
+  border-radius: 50%; /* 캐릭터를 원형으로 만듭니다 */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 14px;
+  color: #000; /* 텍스트 색상 */
 }
