--- a/src/main/frontend/src/assets/css/Character.scss
+++ b/src/main/frontend/src/assets/css/Character.scss
@@ -1,12 +1,11 @@
-/* components/game/Character.scss */
+// assets/css/Character.scss
+
 .character {
   position: absolute;
-  width: 50px;
-  height: 50px;
-  border-radius: 50%; /* 캐릭터를 원형으로 만듭니다 */
   display: flex;
-  justify-content: center;
   align-items: center;
-  font-size: 14px;
-  color: #000; /* 텍스트 색상 */
+  justify-content: center;
+  font-size: 12px;
+  color: white;
+  border-radius: 5px;
 }
