--- a/src/main/frontend/src/assets/css/Game.scss
+++ b/src/main/frontend/src/assets/css/Game.scss
@@ -1,13 +1,16 @@
-// assets/css/Game.scss
+/* assets/css/Game.scss */
 
 .game-container {
   position: relative;
   width: 100vw;
   height: 100vh;
+  overflow: hidden; /* 캐릭터가 화면을 넘어가지 않도록 함 */
 }
 
 .character-area {
   position: relative;
   width: 100%;
   height: 100%;
+  background-color: #f0f0f0; /* 배경색 지정 */
+  overflow: hidden; /* 캐릭터가 화면을 넘어가지 않도록 함 */
 }
