--- a/src/main/frontend/src/assets/css/ChatWindow.scss
+++ b/src/main/frontend/src/assets/css/ChatWindow.scss
@@ -1,37 +1,64 @@
-/* ChatWindow.scss */
 .chat-window {
-    width: 300px;
-    margin: 10px;
-    font-family: Arial, sans-serif;
-  }
-  
-  .chat-messages {
-    height: 300px;
-    border: 1px solid #ccc;
-    padding: 10px;
-    overflow-y: scroll;
-    background-color: #f9f9f9;
-  }
-  
-  .chat-input {
-    width: calc(100% - 10px);
-    padding: 5px;
-    margin-top: 5px;
-    border: 1px solid #ccc;
-  }
-  
-  .chat-send-button {
-    margin-top: 5px;
-    padding: 5px 10px;
-    border: none;
-    background-color: #3498db;
-    color: #fff;
-    cursor: pointer;
-  }
-  
-  .chat-disconnected-message {
-    color: red;
-    font-size: 12px;
-    margin-top: 5px;
-  }
-  
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 300px; // 원하는 높이로 조절
+  background-color: #ffffff;
+  border-top: 1px solid #ccc;
+  box-shadow: 0px -2px 5px rgba(0, 0, 0, 0.1);
+  position: relative;
+  padding: 10px;
+  box-sizing: border-box;
+}
+
+.chat-messages {
+  overflow-y: auto;
+  flex: 1;
+  margin-bottom: 10px; // input과 버튼 사이에 공간 추가
+  border-bottom: 1px solid #ddd;
+}
+
+.message {
+  padding: 5px;
+  margin-bottom: 5px;
+  border-radius: 4px;
+  background-color: #f1f1f1;
+  color: #333;
+}
+
+.message:nth-child(odd) {
+  background-color: #e8e8e8;
+}
+
+.chat-input-container {
+  display: flex;
+  align-items: center;
+}
+
+.chat-input {
+  flex: 1;
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  margin-right: 10px; // 버튼과의 간격 조정
+}
+
+.chat-send-button {
+  padding: 10px 20px;
+  border: none;
+  border-radius: 4px;
+  background-color: #007bff;
+  color: #fff;
+  cursor: pointer;
+  font-size: 14px;
+}
+
+.chat-send-button:hover {
+  background-color: #0056b3;
+}
+
+.chat-disconnected-message {
+  color: #ff0000;
+  font-size: 12px;
+  text-align: center;
+}
