--- a/src/main/frontend/src/assets/css/Character.scss
+++ b/src/main/frontend/src/assets/css/Character.scss
@@ -8,7 +8,7 @@
   color: white;
   font-weight: bold;
   text-align: center;
-  background-color: black; /* 기본 배경 색상 */
+  background-color: #ccc; /* 기본 배경 색상 */
   z-index: 10;
 }
 
