--- a/src/main/frontend/src/assets/css/Character.scss
+++ b/src/main/frontend/src/assets/css/Character.scss
@@ -14,6 +14,7 @@
 
 .character-id {
   position: absolute;
+  color: black;
   top: 0;
   left: 0;
   z-index: 5; /* Ensure the character ID is above other elements */
