--- a/src/main/frontend/src/assets/css/Character.scss
+++ b/src/main/frontend/src/assets/css/Character.scss
@@ -10,7 +10,7 @@
   left: 50%;
   transform: translateX(-50%);
   background-color: #fff;
-  color: black;
+  // color: black;
   padding: 2px 5px;
   border-radius: 3px;
   font-size: 12px;
