--- a/src/main/frontend/src/assets/css/Joke.scss
+++ b/src/main/frontend/src/assets/css/Joke.scss
@@ -6,7 +6,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    // height: 100vh;
     text-align: center;
     padding: 20px;
     background-color: #f0f0f0;
