--- a/src/main/frontend/src/assets/css/View.module.scss
+++ b/src/main/frontend/src/assets/css/View.module.scss
@@ -1,6 +1,9 @@
 .container {
     width: 100%;
-
     border: solid;
     border-color: red;
+
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
 }
