--- a/src/main/frontend/src/assets/css/ViewContainer.module.scss
+++ b/src/main/frontend/src/assets/css/ViewContainer.module.scss
@@ -6,7 +6,7 @@
     gap: 20px; /* 컴포넌트 간 간격 */
 }
 
-.container div {
+.container > div {
     width: 300px; 
     height: 220px; /* 높이를 늘려서 공간 확보 */
     padding: 20px;
@@ -24,7 +24,7 @@
 }
 
 h3 {
-    margin-bottom: 15px;
+    // margin-bottom: 15px;
     font-size: 1.5rem;
     color: #343a40;
 }
