--- a/src/main/frontend/src/assets/css/ViewContainer.module.scss
+++ b/src/main/frontend/src/assets/css/ViewContainer.module.scss
@@ -1,5 +1,5 @@
 .container {
-    width: 100%;
+    // width: 100%;
     display: flex;
     flex-wrap: wrap; /* 여러 컴포넌트가 여러 줄에 배치되도록 */
     justify-content: center; /* 가로로 중앙 정렬 */
