--- a/src/main/frontend/src/assets/css/View.module.scss
+++ b/src/main/frontend/src/assets/css/View.module.scss
@@ -4,6 +4,7 @@
     border-color: red;
 
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: flex-start;
+    flex-wrap: wrap;
 }
