--- a/src/main/frontend/src/assets/css/Main.scss
+++ b/src/main/frontend/src/assets/css/Main.scss
@@ -28,6 +28,7 @@ h1 {
     background: linear-gradient(90deg, #1e3a8a, #64b5f6); // 그라데이션 효과
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+    text-align: center;
 }
 
 .project-list {
