sender name color black

--- a/src/main/frontend/src/assets/css/LiveChatRoomPage.scss
+++ b/src/main/frontend/src/assets/css/LiveChatRoomPage.scss
@@ -195,6 +195,7 @@
             opacity: 0.8;
             letter-spacing: 0.5px;
             padding: 0 4px;
+            color: black;
         }
 
         .message-content {
