sender name color black

--- a/src/main/frontend/src/assets/css/LiveChatRoomPage.scss
+++ b/src/main/frontend/src/assets/css/LiveChatRoomPage.scss
@@ -195,7 +195,6 @@
             opacity: 0.8;
             letter-spacing: 0.5px;
             padding: 0 4px;
-            color: black;
         }
 
         .message-content {
@@ -259,7 +258,7 @@
         }
 
         .sender {
-            color: #667eea;
+            color: #333;
         }
 
         &::after {
