--- a/src/main/frontend/src/assets/css/View.module.scss
+++ b/src/main/frontend/src/assets/css/View.module.scss
@@ -14,3 +14,16 @@
         gap: 1.5rem;
     }
 }
+
+.viewTop {
+    grid-column: 1 / -1; /* 전체 너비 차지 */
+}
+
+.widget {
+    background: rgba(255, 255, 255, 0.05);
+    border-radius: 15px;
+    padding: 1.5rem;
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(10px);
+    border: 1px solid rgba(255, 255, 255, 0.1);
+}
